hphp/hack/test/sound_dynamic/typing/partial_enforce.bad.php.legacy_decl.exp
File "partial_enforce.bad.php", line 12, characters 19-20:
Invalid argument (Typing[4110])
  File "partial_enforce.bad.php", line 3, characters 30-32:
  Expected `int`
  File "partial_enforce.bad.php", line 11, characters 15-21:
  But got `dynamic`
  File "partial_enforce.bad.php", line 3, characters 26-33:
  while allowing dynamic to flow into vec<dynamic>
File "partial_enforce.bad.php", line 13, characters 22-23:
Invalid argument (Typing[4110])
  File "partial_enforce.bad.php", line 4, characters 36-38:
  Expected `int`
  File "partial_enforce.bad.php", line 11, characters 15-21:
  But got `dynamic`
  File "partial_enforce.bad.php", line 4, characters 29-39:
  while allowing dynamic to flow into vec<dynamic>
File "partial_enforce.bad.php", line 14, characters 22-23:
Invalid argument (Typing[4110])
  File "partial_enforce.bad.php", line 5, characters 36-38:
  Expected `int`
  File "partial_enforce.bad.php", line 11, characters 15-21:
  But got `arraykey`
  File "partial_enforce.bad.php", line 5, characters 29-44:
  while allowing dynamic to flow into dict<arraykey, dynamic>
File "partial_enforce.bad.php", line 15, characters 20-21:
Invalid argument (Typing[4110])
  File "partial_enforce.bad.php", line 6, characters 32-34:
  Expected `int`
  File "partial_enforce.bad.php", line 11, characters 15-21:
  But got `arraykey`
  File "partial_enforce.bad.php", line 6, characters 27-40:
  while allowing dynamic to flow into dict<arraykey, dynamic>
File "partial_enforce.bad.php", line 16, characters 22-23:
Invalid argument (Typing[4110])
  File "partial_enforce.bad.php", line 7, characters 36-38:
  Expected `int`
  File "partial_enforce.bad.php", line 11, characters 15-21:
  But got `arraykey`
  File "partial_enforce.bad.php", line 7, characters 29-39:
  while allowing dynamic to flow into keyset<arraykey>
File "partial_enforce.bad.php", line 17, characters 19-20:
Invalid argument (Typing[4323])
  File "partial_enforce.bad.php", line 8, characters 26-26:
  `T` is a constrained type parameter
  File "partial_enforce.bad.php", line 8, characters 31-33:
  This type constraint is violated
  File "partial_enforce.bad.php", line 8, characters 31-33:
  Expected `num`
  File "partial_enforce.bad.php", line 11, characters 15-21:
  But got `dynamic`
  File "partial_enforce.bad.php", line 8, characters 36-41:
  while allowing dynamic to flow into vec<dynamic>
File "partial_enforce.bad.php", line 19, characters 19-20:
Invalid argument (Typing[4110])
  File "partial_enforce.bad.php", line 3, characters 30-32:
  Expected `int`
  File "partial_enforce.bad.php", line 11, characters 15-21:
  But got `dynamic`
  File "partial_enforce.bad.php", line 9, characters 26-31:
  while allowing dynamic to flow into vec<dynamic>
  File "partial_enforce.bad.php", line 3, characters 26-33:
  while allowing dynamic to flow into vec<dynamic>
File "partial_enforce.bad.php", line 20, characters 32-33:
Invalid argument (Typing[4110])
  File "partial_enforce.bad.php", line 3, characters 26-33:
  Expected `vec<int>`
  File "partial_enforce.bad.php", line 11, characters 15-21:
  But got `dynamic`
  File "partial_enforce.bad.php", line 9, characters 26-31:
  while allowing dynamic to flow into vec<dynamic>
